ViewRotate fails w/ AutoDepth & Cursor Depth #47089

Closed
opened 2015-12-30 16:57:16 +01:00 by Tom Pov · 5 comments

System Information
WIN10 x64 GTX580

Blender Version
Broken: 6253815
Worked: ee2b583

Out of Top/Front/Right Orthoview the rotation (jumping into UserPersp) with the middle mousebutton has a wrong AutoDepth.
With the mouse cursor on an object and AutoDepth enabled the center of the rotation is far, perhaps infinite, behind the object.
Oh, and jumping from UserPersp into straight ortho view (1,3,7) chooses a weired centering/alignment.

**System Information** WIN10 x64 GTX580 **Blender Version** Broken: 6253815 Worked: ee2b583 Out of Top/Front/Right Orthoview the rotation (jumping into UserPersp) with the middle mousebutton has a wrong AutoDepth. With the mouse cursor on an object and AutoDepth enabled the center of the rotation is far, perhaps infinite, behind the object. Oh, and jumping from UserPersp into straight ortho view (1,3,7) chooses a weired centering/alignment.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tompov

Added subscriber: @tompov
Campbell Barton changed title from Incorrect AutoDepth to ViewRotate fails w/ AutoDepth & Cursor Depth 2015-12-31 08:36:36 +01:00
Campbell Barton self-assigned this 2015-12-31 08:36:36 +01:00

Note, this only happens when auto-perspective is enabled too.

Note, this only happens when auto-perspective is enabled too.

This issue was referenced by 8a9e20495c

This issue was referenced by 8a9e20495caf6e4185279dc6b7b016834c552064

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47089
No description provided.