Fix T47089: View rotate fails w/ auto depth+perspective